Use Files.writeString() and Files.readString() where possible